# GMAOpyobs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  WIP_collocate_tropo_mpl.py  calipso_l2.py  cmake_it  components.yaml  easy_install  f_collocate.py  fig_aod_tropo_aeronet.py  list_mpl_sites.txt  lite_install  pyproject.toml  setup_env  test1.py
cmake/: UseF2Py.cmake
src/: CMakeLists.txt  active_aeronet  active_aeronet.py  aop  stn_sampler  stn_sampler.py  trj_sampler  wp2traj  wp2traj.py
src/Notebooks/: cs_bining.ipynb  dc8_speed.ipynb  korea_waypoints.csv  malaysia_waypoints.csv  phillipines_waypoints.csv  thailand_waypoints.csv
src/Notebooks/sampler_examples/: Aod_EOS.m2.yaml  ExtData  MERRA2_all  asiaaq-mrg60_dc8_20240217_RA_20240819T140653.ict  calipso_sampler.ipynb  dc8_sampler.ipynb  improve_sampler.ipynb  inst3_3d_aer_Nv  inst3_3d_asm_Nv  mpl_sampler.ipynb
src/TODO/SDA/: CIMEL_process.m  tauf_tauc.c  tauf_tauc.m  test_tauf_tauc.c  test_tauf_tauc.m  test_tauf_tauc.results.txt
src/config/: g2g_pm25.yaml  geos529_pm25.yaml  m2_pm25.yaml
src/f2py/: CMakeLists.txt  VegType_io.c  binObs_py.F
src/pyobs/: .tropomaer.py.swp  GSFC_2023_FullYear.txt  Santa_Cruz_Tenerife_2023_FullYear.txt  __init__.py  aeronet.py  aircrafts.py  aop.py  aqs.py  aura.py  avhrr.py  bits.py  buddycheck.py  calipso_l1p5.py  calipso_l2.py  calipso_l3.py  collocate_tropo_mpl_v1.py  combustion.py  config.py  constants.py  cpl.py  csBin.py  dial.py  f_collocate_1.py  fluxnet.py  gcs03.py  geo04.py  goci.py  goesx.py  hsrl.py  icartt.py  igbp.py  improve.py  ioda.py  kde.py  llBin.py  man.py  mapss.py  mcbef.py  mcd12.py  mcd43.py  (+46 more)
src/pyobs/evaluation/AERONET/: README  plotagainstm21c.py  plotsinglestationonly.py  processaeronet.py  station_analysis.py  station_analysis_withm2.py
src/pyobs/evaluation/MODIS_NNR/: blendmodisstreams.py  monthlygeossample_speciated.py  plotregionalcomparison.py
src/utils/: aop_0to1
