[project]
name = "pyobs"
version = "1.5.0"
description = "GMAO utilities for observations"
requires-python = ">=3.14"
dependencies = [
    "dask>=2025.12.0",
    "h5netcdf>=1.7.3",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "notebook>=7.5.1",
    "numpy>=2.3.5",
    "pandas-stubs==2.3.3.251201",
    "pytz>=2025.2",
    "scipy>=1.16.3",
    "timezonefinder>=8.1.0",
    "xarray>=2025.12.0",
]

[build-system]
requires = ["uv_build"] # Use a version compatible with your uv
build-backend = "uv_build"
